# 2024S-Operating-Systems-Homework

./: .clang-tidy  .gitignore  CMakeLists.txt  newHomework.zsh
HW1/: CMakeLists.txt  hand-written exercises.md
HW1/doc/: README.md
HW1/src/applications/: FileCopy.c  time_pipe.c  time_shared_memory.c
HW1/src/kernel_modules/: CMakeLists.txt  Makefile  jiffies.c  seconds.c  task_info.c
HW2/: CMakeLists.txt  hand-written exercises.md
HW2/doc/: README.md
HW2/src/: Fibonacci.c  Thanos.c
HW3/: Banker.xlsx  CMakeLists.txt  hand-written_exercises.md
HW3/doc/: README.md  programming_exercise_7-15.diff
HW3/src/: 9_28.c  Fibonacci_modified.c  bridge_crossing.c  pi_guess.c
template/: CMakeLists.txt
template/doc/: README.md
